# Copyright 2020 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/buildflags_paint_preview.gni")

source_set("services") {
  sources = [
    "services/paint_preview_tab_service.cc",
    "services/paint_preview_tab_service.h",
    "services/paint_preview_tab_service_factory.cc",
    "services/paint_preview_tab_service_factory.h",
    "services/paint_preview_tab_service_file_mixin.cc",
    "services/paint_preview_tab_service_file_mixin.h",
  ]

  public_deps = [ "//chrome/browser:browser_public_dependencies" ]

  deps = [
    "//chrome/browser/profiles",
    "//chrome/browser/profiles:profile_manager",
    "//components/keyed_service/core",
    "//components/paint_preview/browser",
    "//components/paint_preview/common",
    "//content/public/browser",
  ]

  if (is_android) {
    sources += [ "paint_preview_compositor_utils.cc" ]

    deps += [ "//chrome/browser/paint_preview/android:jni_headers" ]
  }
}

if (!is_android && enable_paint_preview) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "paint_preview_browsertest.cc",
      "paint_preview_compositor_browsertest.cc",
    ]

    deps = [
      "//base",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/ui",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/paint_preview/browser",
      "//components/paint_preview/browser:test_support",
      "//components/paint_preview/common",
      "//components/paint_preview/common:test_utils",
      "//components/paint_preview/common/proto",
      "//components/paint_preview/public",
      "//components/services/paint_preview_compositor/public/mojom",
      "//components/ukm:test_support",
      "//content/public/browser",
      "//content/public/common",
      "//content/test:test_support",
      "//services/metrics/public/cpp:ukm_builders",
      "//testing/gtest",
    ]
  }
}
