# Copyright 2021 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")
import("//build/config/ui.gni")
import("//components/signin/features.gni")

source_set("password_manager") {
  sources = []
  public = [
    "chrome_password_change_service.h",
    "chrome_password_manager_client.h",
    "chrome_webauthn_credentials_delegate.h",
    "chrome_webauthn_credentials_delegate_factory.h",
    "password_change_delegate.h",
    "password_change_service_factory.h",
    "password_field_classification_model_handler_factory.h",
  ]

  public_deps = [
    "//chrome/browser/actor",
    "//chrome/browser/password_manager/factories",

    # deps for public headers
    "//base",
    "//build:branding_buildflags",
    "//build:buildflag_header_h",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/webauthn",
    "//components/autofill/core/browser",
    "//components/autofill/core/common",
    "//components/credential_management:browser",
    "//components/enterprise/buildflags",
    "//components/enterprise/connectors/core",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/password_manager/content/browser",
    "//components/password_manager/core/browser",
    "//components/password_manager/core/browser:password_manager_buildflags",
    "//components/password_manager/core/browser/features:password_features",
    "//components/prefs",
    "//components/safe_browsing:buildflags",
    "//components/signin/public/base:signin_buildflags",
    "//components/sync/service",
    "//content/public/browser",
    "//content/public/common",
    "//extensions/buildflags",
    "//ui/gfx",
    "//url",
  ]

  deps = [
    "//components/affiliations/core/browser:affiliations",
    "//components/optimization_guide/core",
  ]

  if (is_mac) {
    frameworks = [
      "Security.framework",
      "Foundation.framework",
    ]
    deps += [ "//chrome/app:branded_strings" ]
    public += [ "password_manager_util_mac.h" ]
    sources += [ "password_manager_util_mac.mm" ]
  }

  if (is_win) {
    deps += [
      "//chrome/app:branded_strings",
      "//ui/aura",
      "//ui/views",
    ]
    public += [ "password_manager_util_win.h" ]
    sources += [ "password_manager_util_win.cc" ]
  }

  if (is_android) {
    public += [
      "android/account_chooser_dialog_android.h",
      "android/all_passwords_bottom_sheet_controller.h",
      "android/all_passwords_bottom_sheet_helper.h",
      "android/auto_signin_first_run_dialog_android.h",
      "android/auto_signin_prompt_controller.h",
      "android/cred_man_controller.h",
      "android/credential_android.h",
      "android/credential_leak_controller_android.h",
      "android/delayed_password_field_classification_model_handler_factory.h",
      "android/generated_password_saved_message_delegate.h",
      "android/password_accessory_metrics_util.h",
      "android/password_checkup_launcher_helper.h",
      "android/password_checkup_launcher_helper_impl.h",
      "android/password_generation_controller.h",
      "android/password_generation_controller_impl.h",
      "android/password_manager_error_message_delegate.h",
      "android/password_manager_error_message_helper_bridge.h",
      "android/password_manager_error_message_helper_bridge_impl.h",
      "android/password_manager_launcher_android.h",
      "android/password_store_bridge.h",
      "android/save_update_password_message_delegate.h",
    ]
    public_deps += [
      "//chrome/browser/affiliations",
      "//chrome/browser/password_edit_dialog/android",
      "//chrome/browser/password_manager/android:utils",
      "//chrome/browser/touch_to_fill/password_manager/password_generation/android",
      "//chrome/browser/touch_to_fill/password_manager/password_generation/android:public",
      "//chrome/browser/ui/passwords",
      "//components/browser_ui/device_lock/android",
      "//components/device_reauth",
      "//components/messages/android",
    ]
  } else {
    public += [
      # TODO(crbug.com/485620841): Make delegate not dependent on client and
      # move this back to /password_change.
      "password_change/password_change_from_checkup_delegate.h",
      "web_app_profile_switcher.h",
    ]
    public_deps += [
      "//chrome/browser/password_manager/password_change",
      "//chrome/browser/web_applications",
      "//components/webapps/common",
    ]
  }

  if (enable_dice_support) {
    public += [ "multi_profile_credentials_filter.h" ]
  }
}

source_set("impl") {
  sources = [
    "chrome_password_change_service.cc",
    "chrome_password_manager_client.cc",
    "chrome_webauthn_credentials_delegate.cc",
    "chrome_webauthn_credentials_delegate_factory.cc",
    "password_change_service_factory.cc",
    "password_field_classification_model_handler_factory.cc",
  ]

  public_deps = [
    ":password_manager",
    "//chrome/browser:browser_public_dependencies",
  ]

  deps = [
    "//chrome/browser/actor",
    "//chrome/browser/affiliations",
    "//chrome/browser/autofill",
    "//chrome/browser/device_reauth",
    "//chrome/browser/enterprise/connectors/reporting",
    "//chrome/browser/favicon",
    "//chrome/browser/glic",
    "//chrome/browser/history",
    "//chrome/browser/optimization_guide",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/safe_browsing",
    "//chrome/browser/safe_browsing:advanced_protection",
    "//chrome/browser/signin",
    "//chrome/browser/sync",
    "//chrome/browser/sync:factories",
    "//chrome/browser/tab_contents",
    "//chrome/browser/touch_to_fill/password_manager:public",
    "//chrome/browser/ui/autofill",
    "//chrome/browser/ui/browser_window",
    "//chrome/browser/ui/hats",
    "//chrome/browser/ui/passwords",
    "//chrome/browser/webauthn",
    "//chrome/common:channel_info",
    "//components/autofill/content/browser",
    "//components/autofill/core/browser",
    "//components/autofill/core/browser/integrators/password_manager",
    "//components/browsing_data/content",
    "//components/device_reauth",
    "//components/feature_engagement/public",
    "//components/no_state_prefetch/browser",
    "//components/password_manager/content/browser",
    "//components/password_manager/core/browser",
    "//components/password_manager/core/browser:password_manager_buildflags",
    "//components/password_manager/core/browser/affiliation:affiliation_fetching",
    "//components/password_manager/core/browser/affiliation:affiliation_match_helper",
    "//components/password_manager/core/browser/features:password_features",
    "//components/password_manager/core/browser/generation:core",
    "//components/password_manager/core/browser/sharing",
    "//components/password_manager/core/common",
    "//components/policy/core/browser",
    "//components/prefs",
    "//components/profile_metrics",
    "//components/safe_browsing/core/common:features",
    "//components/sessions",
    "//components/signin/public/identity_manager",
    "//components/site_engagement/content",
    "//components/site_isolation",
    "//components/tabs:public",
    "//components/variations/service",
    "//components/version_info",
    "//extensions/buildflags",
  ]

  if (is_android) {
    sources += [
      "android/account_chooser_dialog_android.cc",
      "android/all_passwords_bottom_sheet_controller.cc",
      "android/all_passwords_bottom_sheet_helper.cc",
      "android/auto_signin_first_run_dialog_android.cc",
      "android/auto_signin_prompt_controller.cc",
      "android/cred_man_controller.cc",
      "android/credential_android.cc",
      "android/credential_leak_controller_android.cc",
      "android/delayed_password_field_classification_model_handler_factory.cc",
      "android/generated_password_saved_message_delegate.cc",
      "android/password_checkup_launcher_helper.cc",
      "android/password_checkup_launcher_helper_impl.cc",
      "android/password_generation_controller_impl.cc",
      "android/password_manager_error_message_delegate.cc",
      "android/password_manager_error_message_helper_bridge_impl.cc",
      "android/password_manager_launcher_android.cc",
      "android/password_store_bridge.cc",
      "android/save_update_password_message_delegate.cc",
    ]
    deps += [
      "//chrome/android:chrome_jni_headers",
      "//chrome/browser/keyboard_accessory/android",
      "//chrome/browser/password_manager/android:password_manager_android",
      "//chrome/browser/plus_addresses",
      "//chrome/browser/touch_to_fill/password_manager:public",
      "//chrome/browser/touch_to_fill/password_manager/no_passkeys/android:public",
      "//chrome/browser/touch_to_fill/password_manager/password_generation/android",
      "//chrome/browser/touch_to_fill/password_manager/password_generation/android:public",
      "//chrome/browser/ui/android/passwords",
      "//chrome/browser/webauthn:webauthn_request_delegate_android",
      "//components/messages/android",
      "//components/password_manager/core/browser/affiliation:affiliation_fetching",
      "//components/password_manager/core/browser/form_parsing",
      "//components/password_manager/core/browser/leak_detection",
      "//components/plus_addresses/core/browser",
      "//components/webauthn/android",
    ]
  } else {
    sources += [
      "generated_password_leak_detection_pref.cc",
      "generated_password_leak_detection_pref.h",
      "password_change/password_change_from_checkup_delegate.cc",
      "password_change_delegate_impl.cc",
      "password_change_delegate_impl.h",
      "web_app_profile_switcher.cc",
    ]
    deps += [
      "//chrome/browser/password_manager/password_change",
      "//chrome/browser/ui/passwords",
      "//chrome/browser/ui/passwords:impl",
      "//chrome/browser/ui/tabs:tab_strip",
      "//chrome/browser/ui/user_education",
      "//chrome/browser/ui/web_applications",
      "//chrome/browser/web_applications",
      "//components/password_manager/core/browser/actor_login:actor_login_service_impl",
    ]
  }

  if (enable_dice_support) {
    sources += [ "multi_profile_credentials_filter.cc" ]
  }
}

if (!is_android) {
  static_library("startup_import") {
    sources = [
      "startup_passwords_import_service.cc",
      "startup_passwords_import_service.h",
      "startup_passwords_importer.cc",
      "startup_passwords_importer.h",
    ]

    deps = [
      ":password_manager",
      "//base",
      "//chrome/browser/affiliations",
      "//chrome/browser/profiles:profile",
      "//chrome/common:channel_info",
      "//chrome/common:non_code_constants",
      "//components/affiliations/core/browser:affiliations",
      "//components/keyed_service/core",
      "//components/password_manager/core/browser/import:csv",
      "//components/password_manager/core/browser/import:importer",
      "//components/password_manager/core/browser/password_store:password_store_interface",
      "//components/password_manager/core/browser/ui",
      "//content/public/browser",
    ]
  }
}

source_set("test_support") {
  testonly = true

  # These helpers are used by tests on all platforms, including Android.
  sources = [
    "password_change_delegate_mock.cc",
    "password_change_delegate_mock.h",
    "password_manager_test_util.cc",
    "password_manager_test_util.h",
    "passwords_navigation_observer.cc",
    "passwords_navigation_observer.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/password_manager",
    "//chrome/browser/password_manager/factories",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/sync:factories",
    "//components/password_manager/core/browser",
    "//components/password_manager/core/browser:test_support",
    "//components/password_manager/core/browser/features:password_features",
    "//components/password_manager/core/browser/password_store:test_support",
    "//components/sync:test_support",
    "//components/sync/base",
    "//content/public/browser",
    "//content/test:test_support",
    "//testing/gmock",
  ]

  if (toolkit_views) {
    sources += [
      "password_manager_uitest_util.cc",
      "password_manager_uitest_util.h",
    ]
    deps += [
      "//chrome/browser/ui/autofill",
      "//chrome/browser/ui/passwords",
      "//chrome/browser/ui/passwords:impl",
      "//components/autofill/core/browser",
    ]
  }
}

if (!is_android) {
  source_set("test_support_ui") {
    testonly = true

    sources = [
      "password_manager_test_base.cc",
      "password_manager_test_base.h",
    ]

    deps = [
      ":test_support",
      "//base",
      "//chrome/browser/password_manager",
      "//chrome/browser/password_manager/factories",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/sync:factories",
      "//chrome/browser/ui",
      "//chrome/browser/ui/passwords",
      "//chrome/browser/ui/tabs:tab_enums",
      "//chrome/test:test_support_ui",
      "//components/autofill/core/browser:test_support",
      "//components/password_manager/core/browser:password_form",
      "//components/password_manager/core/browser:test_support",
      "//components/password_manager/core/browser/password_store:test_support",
      "//components/sync:test_support",
      "//content/public/browser",
      "//content/test:test_support",
      "//net",
      "//net:test_support",
      "//services/network/public/mojom",
    ]

    if (!is_chromeos) {
      sources += [
        "password_manager_signin_intercept_test_helper.cc",
        "password_manager_signin_intercept_test_helper.h",
      ]
      deps += [
        "//chrome/browser:browser_process",
        "//chrome/browser/profiles:profile",
        "//chrome/browser/signin",
        "//chrome/browser/ui:ui_features",
        "//chrome/browser/ui/browser_window",
        "//chrome/common:constants",
        "//components/account_id",
        "//components/password_manager/core/browser/password_store:test_support",
        "//components/prefs",
        "//components/signin/public/identity_manager",
        "//google_apis",
      ]
    }
  }
}

source_set("unit_tests") {
  testonly = true

  # chrome_webauthn_credentials_delegate_unittest.cc has file-scope statics of
  # non-trivial-destructor types, which -Wexit-time-destructors rejects.
  configs += [ "//build/config/compiler:no_exit_time_destructors" ]

  sources = [
    "account_password_store_factory_unittest.cc",
    "chrome_password_change_service_unittest.cc",
    "chrome_password_manager_client_unittest.cc",
    "chrome_webauthn_credentials_delegate_unittest.cc",
  ]

  deps = [
    "//base",
    "//base:i18n",
    "//base/test:test_support",
    "//chrome/browser/optimization_guide",
    "//chrome/browser/optimization_guide:test_support",
    "//chrome/browser/password_manager",
    "//chrome/browser/password_manager:impl",
    "//chrome/browser/password_manager:test_support",
    "//chrome/browser/password_manager/factories",
    "//chrome/browser/prefs",
    "//chrome/browser/safe_browsing",
    "//chrome/browser/safe_browsing:test_support",
    "//chrome/browser/sync:factories",
    "//chrome/browser/ui/autofill",
    "//chrome/browser/ui/passwords",
    "//chrome/browser/webauthn",
    "//chrome/test:test_support",
    "//components/affiliations/core/browser:test_support",
    "//components/autofill/content/browser",
    "//components/autofill/content/browser:test_support",
    "//components/autofill/content/common/mojom",
    "//components/autofill/core/browser",
    "//components/autofill/core/browser:test_support",
    "//components/autofill/core/common",
    "//components/autofill/core/common:features",
    "//components/autofill/core/common:test_support",
    "//components/device_reauth",
    "//components/device_reauth:test_support",
    "//components/metrics",
    "//components/metrics:test_support",
    "//components/optimization_guide/core:features",
    "//components/password_manager/content/browser",
    "//components/password_manager/core/browser",
    "//components/password_manager/core/browser:passkey_credential",
    "//components/password_manager/core/browser:password_form",
    "//components/password_manager/core/browser:test_support",
    "//components/password_manager/core/browser/features:password_features",
    "//components/password_manager/core/browser/password_store:test_support",
    "//components/password_manager/core/common",
    "//components/pref_registry",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/safe_browsing/content/browser/password_protection:mock_password_protection",
    "//components/safe_browsing/core/common:features",
    "//components/sessions",
    "//components/sync:test_support",
    "//components/sync/base",
    "//components/sync_preferences:test_support",
    "//components/variations",
    "//components/variations:test_support",
    "//components/variations/service",
    "//content/public/browser",
    "//content/public/common",
    "//content/test:test_support",
    "//device/fido",
    "//device/fido/public",
    "//mojo/public/cpp/bindings",
    "//testing/gmock",
    "//testing/gtest",
    "//third_party/blink/public/common:headers",
    "//url",
  ]

  if (is_android) {
    deps += [
      "//chrome/browser/autofill:test_support",
      "//chrome/browser/keyboard_accessory/android:impl",
      "//chrome/browser/keyboard_accessory/test_utils/android",
      "//chrome/browser/password_manager/android/grouped_affiliations:test_utils",
      "//chrome/browser/touch_to_fill/password_manager:impl",
      "//chrome/browser/webauthn:webauthn_request_delegate_android",
      "//components/password_manager/content/browser:test_support",
      "//components/webauthn/android",
    ]
  } else {
    sources += [
      "generated_password_leak_detection_pref_unittest.cc",
      "password_change_delegate_impl_unittest.cc",
    ]
    deps += [
      "//chrome/browser/extensions:test_support",
      "//chrome/browser/password_manager/password_change",
      "//chrome/browser/signin",
      "//chrome/browser/signin:test_support",
      "//chrome/browser/ui/hats",
      "//chrome/browser/ui/hats:test_support",
      "//chrome/browser/ui/passwords:impl",
      "//chrome/browser/ui/passwords:test_support_ui",
      "//components/optimization_guide/core",
      "//components/safe_browsing/core/common:safe_browsing_prefs",
      "//components/signin/public/identity_manager:test_support",
      "//components/tabs:test_support",
      "//components/ukm:test_support",
      "//services/metrics/public/cpp:metrics_cpp",
      "//services/network:test_support",
    ]
  }

  if (enable_dice_support) {
    sources += [ "multi_profile_credentials_filter_unittest.cc" ]
    deps += [
      "//chrome/browser:browser_process",
      "//chrome/browser/profiles:profile",
      "//chrome/common:constants",
      "//components/metrics",
      "//components/password_manager/core/browser:test_support",
      "//components/signin/public/identity_manager",
      "//components/signin/public/identity_manager:test_support",
    ]
  }
}

if (!is_android) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "credential_manager_browsertest.cc",
      "password_change_browsertest.cc",
      "password_change_from_checkup_browsertest.cc",
      "password_manager_browsertest.cc",
    ]

    deps = [
      ":test_support",
      ":test_support_ui",
      "//base",
      "//base/test:test_support",
      "//chrome/browser:browser_process",
      "//chrome/browser/actor",
      "//chrome/browser/actor:test_support",
      "//chrome/browser/affiliations",
      "//chrome/browser/glic",
      "//chrome/browser/glic/test_support",
      "//chrome/browser/optimization_guide",
      "//chrome/browser/optimization_guide:test_support",
      "//chrome/browser/password_manager",
      "//chrome/browser/password_manager:impl",
      "//chrome/browser/password_manager/factories",
      "//chrome/browser/password_manager/password_change",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/profiles:profile_io_data",
      "//chrome/browser/signin",
      "//chrome/browser/sync:factories",
      "//chrome/browser/ui",
      "//chrome/browser/ui/autofill",
      "//chrome/browser/ui/browser_window",
      "//chrome/browser/ui/login",
      "//chrome/browser/ui/passwords",
      "//chrome/browser/ui/passwords:impl",
      "//chrome/browser/ui/passwords/bubble_controllers",
      "//chrome/browser/ui/tabs:tab_enums",
      "//chrome/browser/ui/tabs:tab_strip",
      "//chrome/browser/ui/test:dialog",
      "//chrome/common",
      "//chrome/common:constants",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/affiliations/core/browser:test_support",
      "//components/autofill/content/browser",
      "//components/autofill/content/browser:test_support",
      "//components/autofill/core/browser",
      "//components/autofill/core/browser:test_support",
      "//components/autofill/core/common",
      "//components/autofill/core/common:features",
      "//components/optimization_guide/core",
      "//components/optimization_guide/core:features",
      "//components/optimization_guide/core:model_execution_test_support",
      "//components/password_manager/content/browser",
      "//components/password_manager/core/browser",
      "//components/password_manager/core/browser:password_form",
      "//components/password_manager/core/browser/features:password_features",
      "//components/password_manager/core/browser/form_parsing",
      "//components/password_manager/core/browser/password_store:password_store_interface",
      "//components/password_manager/core/browser/password_store:test_support",
      "//components/password_manager/core/common",
      "//components/password_manager/core/common:features",
      "//components/prefs",
      "//components/signin/public/identity_manager",
      "//components/signin/public/identity_manager:test_support",
      "//components/sync:test_support",
      "//components/tabs:public",
      "//content/public/browser",
      "//content/public/common",
      "//content/test:browsertest_support",
      "//content/test:test_support",
      "//google_apis",
      "//net",
      "//net:test_support",
      "//testing/gmock",
      "//testing/gtest",
      "//third_party/blink/public/common:headers",
      "//ui/base",
      "//ui/events:test_support",
      "//ui/views",
      "//url",
    ]
  }

  source_set("interactive_ui_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = []
    deps = []

    if (!is_chromeos_device) {
      sources += [
        "password_generation_interactive_uitest.cc",
        "password_manager_interactive_test_base.cc",
        "password_manager_interactive_test_base.h",
        "password_manager_interactive_uitest.cc",
        "password_user_education_interactive_uitest.cc",
      ]
      deps += [
        ":test_support",
        ":test_support_ui",
        "//base",
        "//base/test:test_support",
        "//chrome/browser:browser_process",
        "//chrome/browser/autofill:test_support_ui",
        "//chrome/browser/password_manager",
        "//chrome/browser/profiles:profile",
        "//chrome/browser/signin",
        "//chrome/browser/sync:factories",
        "//chrome/browser/ui",
        "//chrome/browser/ui:ui_features",
        "//chrome/browser/ui/autofill",
        "//chrome/browser/ui/browser_window",
        "//chrome/browser/ui/passwords",
        "//chrome/browser/ui/passwords:impl",
        "//chrome/common:constants",
        "//chrome/test:test_support",
        "//chrome/test:test_support_ui",
        "//components/autofill/content/browser",
        "//components/autofill/core/browser:test_support",
        "//components/autofill/core/common",
        "//components/autofill/core/common:features",
        "//components/password_manager/content/browser",
        "//components/password_manager/core/browser",
        "//components/password_manager/core/browser:password_form",
        "//components/password_manager/core/browser:test_support",
        "//components/password_manager/core/browser/features:password_features",
        "//components/password_manager/core/browser/password_store:password_store_interface",
        "//components/password_manager/core/browser/password_store:test_support",
        "//components/password_manager/core/common:features",
        "//components/prefs",
        "//components/sync:test_support",
        "//content/public/browser",
        "//content/test:test_support",
        "//net:test_support",
        "//testing/gmock",
        "//testing/gtest",
        "//third_party/blink/public/common:headers",
        "//ui/base:test_support",
        "//ui/base/interaction:test_support",
        "//url",
      ]

      if (!is_chromeos) {
        sources += [ "web_app_profile_switcher_interactive_uitest.cc" ]
        deps += [
          "//chrome/browser/ui/web_applications",
          "//chrome/browser/web_applications",
          "//chrome/browser/web_applications:web_applications_test_support",
        ]
      }
    }
  }

  source_set("captured_sites_interactive_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [ "password_manager_captured_sites_interactive_uitest.cc" ]

    deps = [
      ":test_support",
      ":test_support_ui",
      "//base",
      "//base/test:test_support",
      "//chrome/browser/autofill:test_support_ui",
      "//chrome/browser/password_manager",
      "//chrome/browser/password_manager:impl",
      "//chrome/browser/password_manager/factories",
      "//chrome/browser/sync:factories",
      "//chrome/browser/ui",
      "//chrome/browser/ui/passwords",
      "//chrome/test:test_support",
      "//components/autofill/core/common",
      "//components/optimization_guide/core:features",
      "//components/password_manager/core/browser",
      "//components/password_manager/core/browser:test_support",
      "//components/password_manager/core/browser/password_store:test_support",
      "//components/password_manager/core/common:features",
      "//components/safe_browsing/core/common:safe_browsing_prefs",
      "//components/sync:test_support",
      "//content/test:test_support",
      "//net:test_support",
      "//testing/gmock",
      "//testing/gtest",
      "//ui/native_theme:test_support",
    ]
  }
}
