# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("prefetch") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
  ]

  public_deps = [
    "//chrome/common:constants",
    "//third_party/blink/public/common:preloading_headers",
  ]
}

if (!is_android) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [ "prefetch_browsertest.cc" ]

    deps = [
      "//base",
      "//chrome/browser/preloading:prefs",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/ui",
      "//chrome/common:constants",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/prefs",
      "//content/public/browser",
      "//content/test:test_support",
      "//net",
      "//net:test_support",
      "//testing/gtest",
    ]
  }
}
