# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("readaloud") {
  sources = [ "read_aloud_service.h" ]
  public_deps = [
    "//base",
    "//components/keyed_service/core",
  ]
}

source_set("impl") {
  sources = [ "read_aloud_service.cc" ]
  deps = [
    ":readaloud",
    "//chrome/browser/profiles:profile",
  ]
}
