# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  source_set("readaloud") {
    sources = [
      "read_aloud_service.h",
      "read_aloud_service_factory.h",
    ]
    public_deps = [
      "//base",
      "//chrome/browser/profiles:profile",
      "//components/keyed_service/core",
    ]
  }

  source_set("impl") {
    sources = [
      "read_aloud_service.cc",
      "read_aloud_service_factory.cc",
    ]
    deps = [
      ":readaloud",
      "//ui/accessibility:ax_base",
    ]
  }

  source_set("unit_tests") {
    testonly = true
    sources = [ "read_aloud_service_factory_unittest.cc" ]
    deps = [
      ":impl",
      ":readaloud",
      "//base/test:test_support",
      "//chrome/test:test_support",
      "//content/test:test_support",
      "//testing/gtest",
      "//ui/accessibility:ax_base",
    ]
  }
}
