# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  source_set("readaloud") {
    sources = [
      "read_aloud_constants.h",
      "read_aloud_service.h",
      "read_aloud_service_factory.h",
    ]
    public_deps = [
      "//base",
      "//chrome/browser/profiles:profile",
      "//components/dom_distiller/core",
      "//components/keyed_service/core",
      "//content/public/browser",
      "//media",
    ]
  }

  source_set("impl") {
    sources = [
      "read_aloud_service.cc",
      "read_aloud_service_factory.cc",
    ]
    deps = [
      ":readaloud",
      "//chrome/browser/dom_distiller",
      "//components/dom_distiller/content/browser",
      "//ui/accessibility:ax_base",
    ]
  }

  source_set("unit_tests") {
    testonly = true
    sources = [
      "read_aloud_service_factory_unittest.cc",
      "read_aloud_service_unittest.cc",
    ]
    deps = [
      ":impl",
      ":readaloud",
      "//base/test:test_support",
      "//chrome/browser/dom_distiller",
      "//chrome/test:test_support",
      "//components/dom_distiller/core",
      "//components/dom_distiller/core:test_support",
      "//content/test:test_support",
      "//testing/gmock",
      "//testing/gtest",
      "//ui/accessibility:ax_base",
    ]
  }
}
